<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="1000dp"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
     >

    <RelativeLayout
        android:id="@+id/next_day_offer_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue" >

        <TextView
            android:id="@+id/next_day_offer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/next_day_offer_button"
            android:gravity="center"
            android:text="@string/next_day_offer"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/next_day_is"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/next_day_offer"
            android:layout_toLeftOf="@id/next_day_offer_button"
            android:gravity="center"
            android:text="@string/next_day_is"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/go_to_control_panel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/action_next_day_offer_description"
            android:src="@drawable/ic_action_forward"
            android:onClick="controlPanel" />

      

    </RelativeLayout>

    <fragment
        android:id="@+id/menu_composition_fragment"
        android:name="com.maivic.restaurant.MenuCompositionFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
     <TextView
        
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
 
 
            android:gravity="center"
            android:text="@string/next_day_is"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

	
</LinearLayout>