<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

        <TextView
            android:id="@+id/compozitia_propunerii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:scaleType="fitCenter"
            android:text="Compozitia propunerii"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/help_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/compozitia_propunerii"
            
            android:src="@android:drawable/ic_menu_help"
             />
		</RelativeLayout>
        
	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="2dip"
	        android:background="#000000"
	         />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" >
	       	
	        
	 
	        
	          <fragment android:name="com.maivic.restaurant.CourseFragment"
            	android:id="@+id/first_course_fragment"
            	custom:title="@string/first_course_title"
            	custom:configurable="true"
            	android:layout_weight="0.33"
            	android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
            	
	              />
	       
	       
	        <View
	        android:layout_width="2dip"
	        android:layout_height="fill_parent"
	        android:background="#000000"
	         />
	        
	        
	       <fragment android:name="com.maivic.restaurant.CourseFragment"
            	android:id="@+id/main_course_fragment"
            	custom:title="@string/second_course_title"
            	custom:configurable="false"
            	android:layout_weight="0.33"
            	android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
            	
	              />
	    
	       
	         <View
	        android:layout_width="2dip"
	        android:layout_height="fill_parent"
	        android:background="#000000"
	         /> 
	         
	     
	         <fragment android:name="com.maivic.restaurant.CourseFragment"
            	android:id="@+id/third_course_fragment"
            	custom:title="@string/third_course_title"
            	custom:configurable="false"
            	android:layout_weight="0.33"         	
            	android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
            	
	              />
	         
	     
	    </LinearLayout>

</LinearLayout>
